issues solving sq